Visual animations developed

--- a/expanding-cards/index.html
+++ b/expanding-cards/index.html
@@ -12,14 +12,13 @@
 <body>
     <main>
         <ul class="gallery">
-            <li class="gallery-item"><img src="./static/1_jeremy-allouche.jpg" alt="img"></li>
-            <li class="gallery-item"><img src="./static/2_haseeb-jamil.jpg" alt=""></li>
-            <li class="gallery-item"><img src="./static/3_pine-watt.jpg" alt=""></li>
-            <li class="gallery-item"><img src="./static/4_tienko-dima.jpg" alt=""></li>
-            <li class="gallery-item"><img src="./static/5_tobias-tullius.jpg" alt=""></li>
-            <li class="gallery-item"><img src="./static/6_jay-mantri.jpg" alt=""></li>
-            <li class="gallery-item"><img src="./static/7_luca-bravo.jpg" alt=""></li>
-            <li class="gallery-item"><img src="./static/8_marita-kavelashvili.jpg" alt=""></li>
+            <li class="gallery-item"><img src="./static/1-jason-blackeye.jpg" alt="img"></li>
+            <li class="gallery-item"><img src="./static/2-sergey-pesterev.jpg" alt=""></li>
+            <li class="gallery-item"><img src="./static/3-joe-mcdaniel.jpg" alt=""></li>
+            <li class="gallery-item"><img src="./static/4-hasan-almasi.jpg" alt=""></li>
+            <li class="gallery-item"><img src="./static/5-brady-bellini.jpg" alt=""></li>
+            <li class="gallery-item"><img src="./static/6-ken-cheung.jpg" alt=""></li>
+            <li class="gallery-item"><img src="./static/7-kai-oberhauser.jpg" alt=""></li>
         </ul>
     </main>
 
