--- a/expanding-cards/index.html
+++ b/expanding-cards/index.html
@@ -13,12 +13,12 @@
     <main>
         <ul class="gallery">
             <li class="gallery-item"><img src="./static/1-jason-blackeye.jpg" alt="img"></li>
-            <li class="gallery-item"><img src="./static/2-sergey-pesterev.jpg" alt=""></li>
-            <li class="gallery-item"><img src="./static/3-joe-mcdaniel.jpg" alt=""></li>
-            <li class="gallery-item"><img src="./static/4-hasan-almasi.jpg" alt=""></li>
-            <li class="gallery-item"><img src="./static/5-brady-bellini.jpg" alt=""></li>
-            <li class="gallery-item"><img src="./static/6-ken-cheung.jpg" alt=""></li>
-            <li class="gallery-item"><img src="./static/7-kai-oberhauser.jpg" alt=""></li>
+            <li class="gallery-item"><img src="./static/2-sergey-pesterev.jpg" alt="img"></li>
+            <li class="gallery-item"><img src="./static/3-joe-mcdaniel.jpg" alt="img"></li>
+            <li class="gallery-item"><img src="./static/4-hasan-almasi.jpg" alt="img"></li>
+            <li class="gallery-item"><img src="./static/5-brady-bellini.jpg" alt="img"></li>
+            <li class="gallery-item"><img src="./static/6-ken-cheung.jpg" alt="img"></li>
+            <li class="gallery-item"><img src="./static/7-kai-oberhauser.jpg" alt="img"></li>
         </ul>
     </main>
 
