Added picture authors

--- a/expanding-cards/index.html
+++ b/expanding-cards/index.html
@@ -6,23 +6,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Expanding Cards</title>
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./static/styles/style.css">
+    <link rel="stylesheet" href="./static/styles/fonts.css">
 </head>
 
 <body>
     <main>
         <ul class="gallery">
-            <li class="gallery-item"><img src="./static/1-jason-blackeye.jpg" alt="img"></li>
-            <li class="gallery-item"><img src="./static/2-sergey-pesterev.jpg" alt="img"></li>
-            <li class="gallery-item"><img src="./static/3-joe-mcdaniel.jpg" alt="img"></li>
-            <li class="gallery-item"><img src="./static/4-hasan-almasi.jpg" alt="img"></li>
-            <li class="gallery-item"><img src="./static/5-brady-bellini.jpg" alt="img"></li>
-            <li class="gallery-item"><img src="./static/6-ken-cheung.jpg" alt="img"></li>
-            <li class="gallery-item"><img src="./static/7-kai-oberhauser.jpg" alt="img"></li>
+            <li class="gallery-item">
+                <img src="./static/images/1-jason-blackeye.jpg" alt="img">
+                <span>Jason Blackeye</span>
+            </li>
+            <li class="gallery-item">
+                <img src="./static/images/2-sergey-pesterev.jpg" alt="img">
+                <span>Sergey Pesterev</span>
+            </li>
+            <li class="gallery-item">
+                <img src="./static/images/3-joe-mcdaniel.jpg" alt="img">
+                <span>Joe McDaniel</span>
+            </li>
+            <li class="gallery-item">
+                <img src="./static/images/4-hasan-almasi.jpg" alt="img">
+                <span>Hasan Almasi</span>
+            </li>
+            <li class="gallery-item">
+                <img src="./static/images/5-brady-bellini.jpg" alt="img">
+                <span>Brady Ballini</span>
+            </li>
+            <li class="gallery-item">
+                <img src="./static/images/6-ken-cheung.jpg" alt="img">
+                <span>Ken Cheung</span>
+            </li>
+            <li class="gallery-item">
+                <img src="./static/images/7-kai-oberhauser.jpg" alt="img">
+                <span>Kai Oberhauser</span>
+            </li>
         </ul>
     </main>
 
-    <script src="./script/script.js"></script>
+    <script src="./static/scripts/script.js"></script>
 </body>
 
 </html>
